src/apps/Altinn.AccessManagement/deploy/app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: access-management
  labels:
    app.kubernetes.io/name: access-management
    app.kubernetes.io/part-of: altinn-auth
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: access-management
  template:
    metadata:
      labels:
        app.kubernetes.io/name: access-management
        app.kubernetes.io/part-of: altinn-auth
        azure.workload.identity/use: "true"
    annotations:
      cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      linkerd.io/inject: enabled
    spec:
      serviceAccountName: access-management
      containers:
      - name: access-management
        image: nginxdemos/hello:plain-text
        ports:
        - name: http
          containerPort: 80
      
        resources:
        request:
          cpu: 100m
          memory: 128Mi
