src/apps/Altinn.AccessManagement/deploy/app/base/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: access-management
  labels:
    app.kubernetes.io/name: access-management
    app.kubernetes.io/part-of: authorization
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik
